系列详情活动模块页面搭建中

--- a/libs/css/common.scss
+++ b/libs/css/common.scss
@@ -11,3 +11,11 @@
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
 }
+.nowrap_2 {
+    display: -webkit-box !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-all;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
