登录接口、隐私接口调试

--- a/libs/css/common.scss
+++ b/libs/css/common.scss
@@ -29,6 +29,5 @@ html{
 	background-color: #000;
 }
 body,html,view{
-	overflow-x: hidden;
+	// overflow-x: hidden;
 }
-body::-webkit-scrollbar {display: none;}
