--- a/libs/css/common.scss
+++ b/libs/css/common.scss
@@ -27,7 +27,8 @@ html{
 	height: 100%;
 	margin: 0 auto;
 	background-color: #000;
+	
 }
-body,html,view{
-	// overflow-x: hidden;
+body{
+	safe-area-inset-bottom:env(safe-area-inset-bottom);
 }
