--- a/libs/css/common.scss
+++ b/libs/css/common.scss
@@ -32,3 +32,6 @@ html{
 body{
 	safe-area-inset-bottom:env(safe-area-inset-bottom);
 }
+.uni-tabbar__label{
+	font-family: SourceHanSansCN-Medium, SourceHanSansCN;
+}
