--- a/subpageB/MyOrderCenter/components/common.scss
+++ b/subpageB/MyOrderCenter/components/common.scss
@@ -6,7 +6,7 @@
 	.item {
 		padding: 40rpx;
 		margin-bottom: 40rpx;
-		background: #0A0C47;
+		background: #333;
 		border-radius: 20rpx;
 
 		.item-top {
@@ -112,12 +112,12 @@
 			}
 
 			.btn-cancel {
-				border: 2rpx solid #A5A6FF;
-				color: #A5A6FF;
+				border: 2rpx solid #28D8E5;
+				color: #28D8E5;
 			}
 
 			.btn-pay {
-				background: linear-gradient(180deg, #70D0FF 0%, #D575FF 100%);
+				background: #28D8E5;
 				color: #000;
 			}
 		}
