--- a/libs/css/common.scss
+++ b/libs/css/common.scss
@@ -30,7 +30,8 @@ html{
 	
 }
 body{
-	safe-area-inset-bottom:env(safe-area-inset-bottom);
+	padding-bottom: constant( safe-area-inset-bottom);
+	padding-bottom: env( safe-area-inset-bottom);
 }
 .uni-tabbar__label{
 	font-family: SourceHanSansCN-Medium, SourceHanSansCN;
