--- a/libs/css/common.scss
+++ b/libs/css/common.scss
@@ -2,14 +2,11 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
-	-webkit-line-clamp: 1;
-	-webkit-box-orient: vertical;
 }
 .nowrap_s {
+	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	-webkit-line-clamp: 1;
-	-webkit-box-orient: vertical;
 }
 .nowrap_2 {
     display: -webkit-box !important;
