space-bewteen done

--- a/subpageB/MyOrderCenter/components/common.scss
+++ b/subpageB/MyOrderCenter/components/common.scss
@@ -73,6 +73,7 @@
 
 			.goods-info {
 				font-family: PingFangSC-Medium, PingFang SC;
+				width:100%;
 				display: flex;
 				flex-direction: column;
 				justify-content: space-between;
